feat: Upgrade dependencies to Spring Boot 3.5.14 required/compatible. (#29)
* feat: Upgrade to support services running on Spring Boot 3.3.x+: initial changes made by OpenRewrite plugin.

* refactor: Code is rewritten to avoid redundant operations and cleansed. Also: jakarta.annotation-api:2.1.1 dependency is added.

* feat: Migration to httpclient5 is performed. Dependencies to httpclient5:5.4.4 and httpcore5:5.3.4 are added.

* fix: junit dependency is removed. AtpRamWriterHierarchyTest: test is fixed by setting Mockito Strictness to LENIENT.

* feat: Upgrade to support services on Spring Boot 3.5.14: Changes by OpenRewrite plugin.

* fix(deps): Bump dependencies: guava to 32.0.1-jre, jackson to 2.18.6, logback to 1.5.32, kafka-clients to 3.9.2, postgresql to 42.7.7, slf4j to 2.0.17, netty to 4.1.132.Final, undertow-core to 2.3.21.Final, mapstruct to 1.6.3.

* build: Project version is set to 5.0.0-SNAPSHOT.

* fix(deps): Bump atp-crypt to 1.0.0. Also: Improve dependencies management.

* fix: Fix SPELL_CODESPELL errors, remove unused properties from pom.xml.