@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -16,8 +16,6 @@
 
 package org.qubership.atp.adapter.excel;
 
-import org.qubership.atp.adapter.excel.exceptions.InvalidFormatOfSourceException;
-import org.qubership.atp.adapter.excel.exceptions.RecordingInFileException;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
@@ -25,6 +23,7 @@ import java.io.IOException;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
+
 import org.apache.commons.collections.IteratorUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.logging.Log;
@@ -35,9 +34,11 @@ import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.ss.usermodel.WorkbookFactory;
 import org.apache.poi.xssf.streaming.SXSSFWorkbook;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import org.qubership.atp.adapter.excel.exceptions.InvalidFormatOfSourceException;
+import org.qubership.atp.adapter.excel.exceptions.RecordingInFileException;
 
 public class ExcelBook {
-    private static Log log = LogFactory.getLog(ExcelBook.class);
+    private static final Log log = LogFactory.getLog(ExcelBook.class);
     private Workbook workbook;
     private File currentFile;
     private ExcelSheet sheet;
@@ -68,25 +69,22 @@ public class ExcelBook {
 
             try {
                 Workbook wb = WorkbookFactory.create(fis = new FileInputStream(file));
-                if (wb instanceof XSSFWorkbook && isSXSSFWorkbook) {
-                    this.workbook = new SXSSFWorkbook((XSSFWorkbook)wb, 999999);
+                if (wb instanceof XSSFWorkbook fWorkbook && isSXSSFWorkbook) {
+                    this.workbook = new SXSSFWorkbook(fWorkbook, 999999);
                 } else {
                     this.workbook = wb;
                 }
 
                 this.currentFile = file;
-            } catch (IOException var13) {
-                IOException ex = var13;
-                throw new InvalidFormatOfSourceException(String.format("Could not read '%s' file", file.getAbsolutePath()), ex);
-            } catch (InvalidFormatException var14) {
-                InvalidFormatException ex = var14;
-                throw new InvalidFormatOfSourceException(String.format("Invalid format of '%s' file : ", this.currentFile.getName()), ex);
+            } catch (IOException ex) {
+                throw new InvalidFormatOfSourceException("Could not read '%s' file".formatted(file.getAbsolutePath()), ex);
+            } catch (InvalidFormatException ex) {
+                throw new InvalidFormatOfSourceException("Invalid format of '%s' file : ".formatted(this.currentFile.getName()), ex);
             } finally {
                 if (fis != null) {
                     try {
                         fis.close();
-                    } catch (IOException var12) {
-                        IOException e = var12;
+                    } catch (IOException e) {
                         log.error(e.getMessage());
                     }
                 }
@@ -122,7 +120,7 @@ public class ExcelBook {
 
     public ExcelSheet openSheet(String newSheetName, int headerRowIndex, String[] headerRowIdentifiers) throws InvalidFormatOfSourceException {
         if (!this.hasSheet(newSheetName)) {
-            throw new InvalidFormatOfSourceException(String.format("Sheet '%s' hasn't been found in the '%s' WB", newSheetName, this.currentFile.getName()));
+            throw new InvalidFormatOfSourceException("Sheet '%s' hasn't been found in the '%s' WB".formatted(newSheetName, this.currentFile.getName()));
         } else {
             if (this.sheet == null || !this.sheet.getSheetName().equalsIgnoreCase(newSheetName)) {
                 this.sheet = null;
@@ -144,21 +142,17 @@ public class ExcelBook {
         try {
             fileOut = new FileOutputStream(this.getCurrentFile());
             this.workbook.write(fileOut);
-        } catch (IOException var6) {
-            IOException ex = var6;
+        } catch (IOException ex) {
             if (this.workbook instanceof SXSSFWorkbook) {
                 log.error("XSSFWorkbook saving exception. You can use it only once. Otherwise - you should open file again", ex);
             }
-
             throw new RecordingInFileException("Recording has been attempted in open file. File: " + this.getCurrentFile().getName() + " being used by another process.", ex);
         } finally {
             if (fileOut != null) {
                 fileOut.flush();
                 fileOut.close();
             }
-
         }
-
     }
 
     public Workbook getWorkbook() {
@@ -222,7 +216,7 @@ public class ExcelBook {
 
     public ExcelSheet cloneSheet(int sheetIndex) throws InvalidFormatOfSourceException {
         this.validateSheetIndex(sheetIndex);
-        return this.cloneSheet(sheetIndex, (String)null);
+        return this.cloneSheet(sheetIndex, null);
     }
 
     public ExcelSheet cloneSheet(int sheetIndex, String newSheetName) throws InvalidFormatOfSourceException {
@@ -241,9 +235,9 @@ public class ExcelBook {
     }
 
     public Iterator<ExcelSheet> iterator() {
-        return new Iterator<ExcelSheet>() {
+        return new Iterator<>() {
             int index = 1;
-            int endIndex = ExcelBook.this.getMaxSheetNum();
+            final int endIndex = ExcelBook.this.getMaxSheetNum();
 
             public boolean hasNext() {
                 return this.index <= this.endIndex;
@@ -289,23 +283,18 @@ public class ExcelBook {
 
             out = new FileOutputStream(file);
             ((Workbook)wb).write(out);
-        } catch (IOException var14) {
-            IOException ex = var14;
-            ex.printStackTrace();
+        } catch (IOException ex) {
+            log.error(ex);
         } finally {
             if (out != null) {
                 try {
                     out.flush();
                     out.close();
-                } catch (IOException var13) {
-                    IOException e = var13;
-                    e.printStackTrace();
+                } catch (IOException e) {
                     log.fatal("Error during reading ExcelBook: " + e.getMessage());
                 }
             }
-
         }
-
     }
 
     private void validateSheetIndex(int sheetIndex) {
@@ -315,7 +304,7 @@ public class ExcelBook {
     }
 
     public boolean equals(Object object) {
-        return !(object instanceof ExcelBook) ? false : this.toString().equals(((ExcelBook)object).toString());
+        return !(object instanceof ExcelBook) ? false : this.toString().equals(object.toString());
     }
 
     public void close() throws IOException {
