@@ -112,7 +112,7 @@ public class WebReportWriterJoint extends AbstractWebReportWriter {
         this.log().description = description;
         String fileName;
         synchronized(this) {
-            fileName = "report" + String.format("%04d", ResourcesManager.getLogCounter()) + ".xml";
+            fileName = "report" + "%04d".formatted(ResourcesManager.getLogCounter()) + ".xml";
         }
 
         this.log().currentLogName = logName;
@@ -169,7 +169,7 @@ public class WebReportWriterJoint extends AbstractWebReportWriter {
 
     public synchronized void openSection(String sectionName, String message, SourceProvider page) {
         this.log().currentLogCallStack.push(sectionName);
-        this.appendReportFile(this.formatMessageOpen(sectionName, (Level)null, message, page), this.log().reportFileLength);
+        this.appendReportFile(this.formatMessageOpen(sectionName, null, message, page), this.log().reportFileLength);
 
         for (Logger logger : this.customLoggers) {
             logger.info(this.log().currentLogCallStack.toString() + " Section - " + sectionName);
@@ -200,7 +200,7 @@ public class WebReportWriterJoint extends AbstractWebReportWriter {
     }
 
     private File createSnapshot(SourceProvider page) {
-        String pageFileName = "page" + String.format("%04d", ResourcesManager.getPageCounter());
+        String pageFileName = "page" + "%04d".formatted(ResourcesManager.getPageCounter());
         File pageFileHTML = new File(new File(this.reportDir, "pages"), pageFileName + "." + page.getExtension());
         if (this.logReportSnapshots) {
             snapshotFiles.add(pageFileHTML);
