@@ -1,5 +1,5 @@
 /*
- *  Copyright 2024-2025 NetCracker Technology Corporation
+ *  Copyright 2024-2026 NetCracker Technology Corporation
  *
  *  Licensed under the Apache License, Version 2.0 (the "License");
  *  you may not use this file except in compliance with the License.
@@ -16,9 +16,7 @@
 
 package org.qubership.atp.adapter.testcase;
 
-import org.qubership.atp.adapter.utils.Utils;
 import java.io.BufferedReader;
-import java.io.Closeable;
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.IOException;
@@ -32,12 +30,15 @@ import java.util.Set;
 import java.util.TimeZone;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import javax.xml.parsers.ParserConfigurationException;
+
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.custommonkey.xmlunit.XMLUnit;
+import org.qubership.atp.adapter.utils.Utils;
 
 public class Config {
     private static final Log log = LogFactory.getLog(Config.class);
@@ -83,9 +84,8 @@ public class Config {
         if (!getString(key).trim().isEmpty()) {
             try {
                 return Integer.parseInt(getString(key));
-            } catch (NumberFormatException var3) {
-                NumberFormatException e = var3;
-                log.warn(String.format("'%s' value should be a number. Actual value is '%s'", key, getString(key)), e);
+            } catch (NumberFormatException e) {
+                log.warn("'%s' value should be a number. Actual value is '%s'".formatted(key, getString(key)), e);
                 return defaultValue;
             }
         } else {
@@ -167,9 +167,9 @@ public class Config {
                 String line;
                 while((line = lines.readLine()) != null) {
                     line = line.trim();
-                    if (!line.startsWith("#") && line.length() != 0) {
+                    if (!line.startsWith("#") && !line.isEmpty()) {
                         Matcher m = PARAMETRIZATION_PATTERN.matcher(line);
-                        StringBuffer resultLine = new StringBuffer();
+                        StringBuilder resultLine = new StringBuilder();
 
                         while(m.find()) {
                             String key = m.group(1);
@@ -197,12 +197,11 @@ public class Config {
                         }
                     }
                 }
-            } catch (IOException var11) {
-                IOException e = var11;
+            } catch (IOException e) {
                 log.fatal("Failed to read properties file: " + propertiesFile.getName(), e);
                 throw new RuntimeException("IOException", e);
             } finally {
-                Utils.close(new Closeable[]{lines});
+                Utils.close(lines);
             }
 
             return p;
@@ -232,8 +231,7 @@ public class Config {
             factory.setAttribute("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
             factory.setNamespaceAware(true);
             builder = factory.newDocumentBuilder();
-        } catch (ParserConfigurationException var2) {
-            ParserConfigurationException e = var2;
+        } catch (ParserConfigurationException e) {
             log.fatal("ParserConfigurationException", e);
             throw new RuntimeException("ParserConfigurationException", e);
         }
@@ -248,7 +246,7 @@ public class Config {
         }
 
         String timeZoneId = getString("nc.timezone");
-        serverTimeZone = timeZoneId.length() == 0 ? TimeZone.getDefault() : TimeZone.getTimeZone(timeZoneId);
+        serverTimeZone = timeZoneId.isEmpty() ? TimeZone.getDefault() : TimeZone.getTimeZone(timeZoneId);
     }
 }
 
